# feup-iart-timetabling

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  generated01.tim  main.cpp  notes.md
examples/: generate.js
src/: genetic.cpp  genetic.h  heuristics.h  hill_climbing.cpp  hill_climbing.h  main.cpp  main.h  menu.h  model.cpp  model.h  simulated_annealing.cpp  simulated_annealing.h
test/: test.cpp
